<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="GIF">GIF</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_already_desc">"This account is already associated with a different profile.

 If you continue:
 1. Your purchases &amp; subscriptions may not carry over
2. Your current progress could be lost 

Would you like to continue with this account or use a different one?"</string>
    <string name="account_already_linked">Account Already Linked</string>
    <string name="account_authenticator_accountType">com.dramawave.app.ashes</string>
    <string name="account_authenticator_contentAuthority">com.dramawave.app.ashes.provider</string>
    <string name="account_balance_str">Account Balance</string>
    <string name="account_continue_login">Continue Login</string>
    <string name="account_leaving_your_account">Leaving Your Account?</string>
    <string name="account_linked_account_reminder">Linked Account Reminder</string>
    <string name="account_signing_out_hint">Signing out will stop syncing your purchases, favorites, and watch history across devices. You can sign in again anytime to restore your data.</string>
    <string name="account_switch_to_user">This account has been linked by you before. Logging in will switch to that user, and your current data won’t be kept. Continue or use another account?</string>
    <string name="account_try_another">Try Another</string>
    <string name="ad_daily_limit_notice">Daily ad limit reached</string>
    <string name="ad_error_code">(Error Code: %1$d)</string>
    <string name="ad_free_experience">Ad-Free Experience</string>
    <string name="ad_loading">Ad loading</string>
    <string name="ad_loading_description">Remove ads with a quick payment and enjoy uninterrupted episodes.</string>
    <string name="ad_scroll_countdown_end_text">Continue scrolling to next episode</string>
    <string name="ad_scroll_countdown_text">Episode is loading, please scroll after %s s</string>
    <string name="ad_str">AD</string>
    <string name="add_a_comment">Enter your comment here...</string>
    <string name="add_calendar_deny">No Calendar Permission</string>
    <string name="add_calendar_fail">Failed to Add to Calendar</string>
    <string name="add_calendar_succ">Added to Calendar</string>
    <string name="add_follow_notice">Added to ‘My List’</string>
    <string name="add_to_like_notice">Added to MyList-Like</string>
    <string name="added_to_my_list">"Added to 'My List'"</string>
    <string name="ads_title">Watch Ads</string>
    <string name="all_episodes">Total %1$s Episodes</string>
    <string name="android_startup">android.startup</string>
    <string name="android_startup_provider_config">android.startup.provider.config</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">okprofiler</string>
    <string name="app_name_drama">DramaWave</string>
    <string name="app_website">https://blank</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applovin_agree_message">Please press \"Continue\" if you choose to start using our app.</string>
    <string name="applovin_alt_privacy_policy_text" />
    <string name="applovin_continue_button_text">Continue</string>
    <string name="applovin_creative_debugger_disabled_text">Enable the Creative Debugger SDK settings in order to view recent ads.</string>
    <string name="applovin_creative_debugger_no_ads_text">No recently displayed ads found.</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="applovin_pp_and_tos_title">To use %s you must agree to our Terms &amp; Conditions and affirm you have reviewed our Privacy Policy</string>
    <string name="applovin_pp_title">To use %s you must affirm that you have reviewed and acknowledged our Privacy Policy.</string>
    <string name="applovin_privacy_policy_text">Privacy Policy</string>
    <string name="applovin_terms_of_service_text">Terms &amp; Conditions</string>
    <string name="applovin_terms_of_use_text">Terms of Use</string>
    <string name="at_you">\@you:%1$s</string>
    <string name="attr_drama_auto_detail_continue_episode_toast">Continuing the short drama you just saw</string>
    <string name="attr_drama_auto_detail_first_episode_toast">Now playing the drama you just saw</string>
    <string name="attribution_better_matched_drama_toast">Switching to a better-matched drama</string>
    <string name="attribution_channel_name_other">Other APP</string>
    <string name="attribution_repair_dialog_content">Are you looking for short dramas played on %1$s?</string>
    <string name="attribution_repair_dialog_label">Guess you want</string>
    <string name="audio_switch_error_notice">Audio switch failure, please try again later.</string>
    <string name="auto_added_to_my_list">"Auto-Added to 'My List'"</string>
    <string name="auto_quality">Auto (recommended)</string>
    <string name="auto_quality_desc">Adjusts to give you the best experience for your conditions</string>
    <string name="auto_str">Auto</string>
    <string name="auto_unlock_str">Episodes on Auto-unlock</string>
    <string name="autofill">Autofill</string>
    <string name="autoplay_next_video">Autoplay next video</string>
    <string name="back_tomorrow_for_more">Back tomorrow for more!</string>
    <string name="balance">Balance:</string>
    <string name="banner_adapter_null_error">Adapter is NULL!</string>
    <string name="bar_string_placeholder" />
    <string name="base_app_exit_one_more_press">Tap again to exit the app</string>
    <string name="be_vip_long">Become VIP to Enjoy HD</string>
    <string name="be_vip_short">Become VIP</string>
    <string name="become_vip">Subscribe</string>
    <string name="bgm_video_top_label">NO. %1$d</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="brvah_load_complete">点击加载更多</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，点击重试</string>
    <string name="brvah_loading">加载中...</string>
    <string name="btn_audio_track">Audio</string>
    <string name="btn_subtitles_track">Subtitles</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="cancel_up">Cancel</string>
    <string name="common_the_end">--The End--</string>
    <string name="common_try_again">Try again</string>
    <string name="confirm">Confirm</string>
    <string name="custom_brvah_load_complete">Click to load more</string>
    <string name="default_loading">Loading...</string>
    <string name="delete_all_history_tips">Are you sure to delete all your search?</string>
    <string name="device_manager">Device management</string>
    <string name="enable_notification_tips">Stay informed with popular recommendations and latest updates!</string>
    <string name="mine_account_deletion">Account Deletion</string>
    <string name="mine_empty" />
    <string name="mine_privacy_policy">Privacy Policy</string>
    <string name="mine_settings">Settings</string>
    <string name="mine_terms_of_use">Terms of Use</string>
    <string name="network_diagnosis">Network Diagnosis</string>
    <string name="network_diagnosis_go_to_settings">Go To Settings</string>
    <string name="network_diagnosis_instruction">Network Setup Instructions</string>
    <string name="network_diagnosis_steps1">1. Ensure that cellular data is enabled on your device (note that carriers may charge for data usage).</string>
    <string name="network_diagnosis_steps2">2. Go to Settings → Wi-Fi on your device and check for available Wi-Fi networks.</string>
    <string name="network_diagnosis_steps3">3. If you are already connected to a Wi-Fi network, verify that the network has internet access and that your device is permitted to access the internet via this network.</string>
    <string name="network_diagnosis_steps_title">To connect to the internet, please follow these steps:</string>
    <string name="rate_us">Rate Us</string>
    <string name="sign_out">Sign out</string>
    <string name="sr_change_data_permissions">Change Data Permissions</string>
    <string name="sr_enable_notification_title">Enable Notification</string>
    <string name="sr_later">Later</string>
    <string name="sr_open">Open</string>
    <string name="sr_return_episode_first">Return to Episode 1</string>
    <string name="sr_vip_expired">Your VIP subscription has expired, and access to paid episodes is now locked. Renew your subscription to enjoy unlimited viewing.</string>
    <string name="subscribe_activate_voucher">Activate Voucher</string>
    <string name="tp_close_video">Close Video?</string>
    <string name="tp_close_video1">Close Video</string>
    <string name="tp_keep_play">Keep Watching</string>
    <string name="tp_lost_reward">"You'll miss out on the reward"</string>
    <string name="ugc_avatar_choose_album">Choose From Album</string>
    <string name="ugc_avatar_take_photo">Take Photo</string>
    <string name="ugc_cancel">Cancel</string>
    <string name="ugc_payment_subscription_subtitle">Subscribe to get AI drama generations, plus unlimited access to all series.</string>
    <string name="ugc_payment_subscription_title">Create your own drama with AI</string>
    <string name="vip_off_subscribe_now">Subscribe Now</string>
</resources>