<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/main" android:background="@color/theme_surface1" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.dramawave.core.common.toolkit.qmui.widget.QUMUITranslucentTopBar android:id="@id/status_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <com.hjq.bar.TitleBar android:id="@id/title_bar" app:title="@string/mine_settings" style="@style/CustomTitleBarStyle" />
    </com.dramawave.core.common.toolkit.qmui.widget.QUMUITranslucentTopBar>
    <LinearLayout android:orientation="vertical" android:id="@id/ll_top" android:paddingTop="@dimen/_16sdp" android:paddingBottom="@dimen/_16sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_12sdp" android:layout_marginRight="@dimen/_12sdp" android:layout_marginHorizontal="@dimen/_12sdp" android:paddingVertical="@dimen/_16sdp" app:layout_constraintTop_toBottomOf="@id/status_bar">
        <TextView android:id="@id/tv_teems_of_use" android:text="@string/mine_terms_of_use" app:drawableEndCompat="@drawable/profile_ic_set_arrow_right_automirror" style="@style/SettingsTextStyle" />
        <TextView android:id="@id/tv_privacy_policy" android:text="@string/mine_privacy_policy" app:drawableEndCompat="@drawable/profile_ic_set_arrow_right_automirror" style="@style/SettingsTextStyle" />
        <TextView android:id="@id/tv_network_diagnosis" android:text="@string/network_diagnosis" app:drawableEndCompat="@drawable/profile_ic_set_arrow_right_automirror" style="@style/SettingsTextStyle" />
        <TextView android:id="@id/tv_del_account" android:text="@string/mine_account_deletion" app:drawableEndCompat="@drawable/profile_ic_set_arrow_right_automirror" style="@style/SettingsTextStyle" />
        <TextView android:id="@id/tv_device_manager" android:text="@string/device_manager" app:drawableEndCompat="@drawable/profile_ic_set_arrow_right_automirror" style="@style/SettingsTextStyle" />
        <TextView android:id="@id/tv_change_data_permission" android:visibility="gone" android:text="@string/sr_change_data_permissions" app:drawableEndCompat="@drawable/profile_ic_set_arrow_right_automirror" style="@style/SettingsTextStyle" />
        <TextView android:id="@id/tv_rate_us" android:text="@string/rate_us" app:drawableEndCompat="@drawable/profile_ic_set_arrow_right_automirror" style="@style/SettingsTextStyle" />
    </LinearLayout>
    <TextView android:textSize="16.0sp" android:textColor="@color/theme_text5" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/tv_logout" android:background="@drawable/settings_background_set_logout" android:paddingTop="@dimen/_13sdp" android:paddingBottom="@dimen/_13sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_12sdp" android:layout_marginTop="@dimen/_12sdp" android:layout_marginRight="@dimen/_12sdp" android:text="@string/sign_out" android:layout_marginHorizontal="@dimen/_12sdp" android:paddingVertical="@dimen/_13sdp" app:layout_constraintTop_toBottomOf="@id/ll_top" />
</androidx.constraintlayout.widget.ConstraintLayout>