<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/instructions_container" android:background="@color/theme_surface1" android:paddingLeft="12.0dip" android:paddingRight="12.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingHorizontal="12.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="19.0sp" android:textColor="@color/theme_text5" android:gravity="center" android:layout_gravity="bottom" android:id="@id/go_to_settings" android:background="@drawable/bg_network_diagnosis_go_to_settings" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginBottom="4.0dip" android:text="@string/network_diagnosis_go_to_settings" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="55.0dip">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="24.0sp" android:textStyle="bold" android:textColor="@color/theme_text1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="20.0dip" android:text="@string/network_diagnosis_instruction" />
            <View android:background="@color/theme_line2" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/theme_text1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="12.0dip" android:text="@string/network_diagnosis_steps_title" />
            <TextView android:layout_marginTop="12.0dip" android:text="@string/network_diagnosis_steps1" style="@style/NetworkDiagnosisSteps" />
            <TextView android:layout_marginTop="8.0dip" android:text="@string/network_diagnosis_steps2" style="@style/NetworkDiagnosisSteps" />
            <TextView android:layout_marginTop="8.0dip" android:text="@string/network_diagnosis_steps3" style="@style/NetworkDiagnosisSteps" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>