<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingLeft="20.0dip" android:paddingTop="50.0dip" android:paddingRight="20.0dip" android:paddingBottom="50.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textColor="@android:color/background_dark" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tp_close_video" />
        <TextView android:id="@id/tv_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/tp_lost_reward" />
        <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip">
            <Button android:textColor="#ff3d82f7" android:id="@id/btn_closevideo" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tp_close_video1" />
            <LinearLayout android:background="@drawable/tp_inner_bg_bottom_skip" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip">
                <Button android:textColor="@android:color/white" android:id="@id/btn_keepplay" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="20.0dip" android:text="@string/tp_keep_play" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>