<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/common_shape_conner_12_top_surface_2" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/text_size_16" android:textColor="@color/theme_brand6" android:gravity="center" android:id="@id/tv_choose_album" android:background="@drawable/common_shape_conner_12_top_surface_3" android:layout_width="fill_parent" android:layout_height="@dimen/_51sdp" android:text="@string/ugc_avatar_choose_album" />
    <View android:background="@color/theme_line2" android:layout_width="fill_parent" android:layout_height="@dimen/_0.5sdp" />
    <TextView android:textSize="@dimen/text_size_16" android:textColor="@color/theme_brand6" android:gravity="center" android:id="@id/tv_take_photo" android:background="@color/theme_surface3" android:layout_width="fill_parent" android:layout_height="@dimen/_51sdp" android:text="@string/ugc_avatar_take_photo" />
    <TextView android:textSize="@dimen/text_size_14" android:textColor="@color/theme_text1" android:gravity="center" android:id="@id/tv_take_cancel" android:background="@color/theme_surface3" android:layout_width="fill_parent" android:layout_height="@dimen/_51sdp" android:layout_marginTop="@dimen/_8sdp" android:text="@string/ugc_cancel" />
    <com.dramawave.shared.ui.view.bar.BottomBarSpaceView android:background="@color/theme_surface3" android:layout_width="fill_parent" android:layout_height="@dimen/_1sdp" />
</LinearLayout>