<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/container" android:background="@drawable/ability_bg_bottom_sheet_rounded" android:paddingBottom="0.0dip" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/content_layout" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <ImageView android:id="@id/iv_rate_us" android:layout_width="@dimen/_160sdp" android:layout_height="@dimen/_160sdp" android:src="@drawable/ability_ic_push_guide" android:contentDescription="@string/mine_empty" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="24.0sp" android:textStyle="bold" android:textColor="@color/theme_text1" android:gravity="center" android:id="@id/tv_title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="32.0dip" android:layout_marginTop="@dimen/_28sdp" android:layout_marginRight="32.0dip" android:text="@string/sr_enable_notification_title" android:layout_marginHorizontal="32.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/iv_rate_us" />
        <TextView android:textSize="14.0sp" android:textColor="@color/theme_text1" android:gravity="center" android:id="@id/tv_content" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="32.0dip" android:layout_marginTop="@dimen/_8sdp" android:layout_marginRight="32.0dip" android:text="@string/enable_notification_tips" android:layout_marginHorizontal="32.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_title" />
        <TextView android:textSize="@dimen/_16sdp" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_commit" android:background="@drawable/ability_bg_app_update_button" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:layout_marginTop="@dimen/_32sdp" android:layout_marginRight="13.0dip" android:text="@string/sr_open" android:layout_marginHorizontal="13.0dip" android:paddingVertical="12.0dip" app:layout_constraintTop_toBottomOf="@id/tv_content" />
        <TextView android:textSize="@dimen/_16sdp" android:textColor="@color/theme_text2" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/sr_later" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_commit" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View android:id="@id/bottom_safe_area" android:layout_width="fill_parent" android:layout_height="@dimen/_40sdp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/content_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>