<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:gravity="center" android:id="@id/tv_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_66sdp" android:layout_marginRight="@dimen/_66sdp" android:text="@string/sr_vip_expired" android:layout_marginHorizontal="@dimen/_66sdp" style="@style/theme_TextMedium16" />
    <Space android:layout_width="fill_parent" android:layout_height="@dimen/_16sdp" />
    <TextView android:gravity="center" android:id="@id/tv_subscribe_vip" android:background="@drawable/shape_conner_8_brand6" android:layout_width="fill_parent" android:layout_height="@dimen/_44sdp" android:layout_marginLeft="@dimen/_66sdp" android:layout_marginRight="@dimen/_66sdp" android:text="@string/vip_off_subscribe_now" android:layout_marginHorizontal="@dimen/_66sdp" style="@style/theme_TextMedium16" />
    <Space android:layout_width="fill_parent" android:layout_height="@dimen/_16sdp" />
    <TextView android:gravity="center" android:id="@id/tv_return_episode_1" android:background="@drawable/common_shape_conner_8_line_5" android:layout_width="fill_parent" android:layout_height="@dimen/_44sdp" android:layout_marginLeft="@dimen/_66sdp" android:layout_marginRight="@dimen/_66sdp" android:text="@string/sr_return_episode_first" android:layout_marginHorizontal="@dimen/_66sdp" style="@style/theme_TextMedium16" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/ll_voucher_history" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="@dimen/_20sdp" android:layout_marginTop="@dimen/_16sdp">
        <androidx.appcompat.widget.AppCompatImageView android:id="@id/iv_voucher" android:layout_width="@dimen/_20sdp" android:layout_height="@dimen/_20sdp" android:src="@drawable/icon_voucher_fill" />
        <TextView android:textSize="@dimen/text_size_14" android:textColor="@color/theme_text1" android:id="@id/tv_voucher_history" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/subscribe_activate_voucher" android:maxLines="1" android:layout_marginStart="@dimen/_4sdp" />
        <androidx.appcompat.widget.AppCompatImageView android:id="@id/iv_voucher_right" android:layout_width="@dimen/_16sdp" android:layout_height="@dimen/_16sdp" android:src="@drawable/ic_right_gray" android:tint="@color/theme_text2" android:layout_marginStart="@dimen/_2sdp" />
    </LinearLayout>
</LinearLayout>