<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:paddingTop="@dimen/_12sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/_8sdp" android:paddingStart="@dimen/_16sdp" android:paddingEnd="@dimen/_12sdp"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/_16sdp" android:textStyle="bold" android:textColor="@color/theme_text1" android:ellipsize="end" android:id="@id/tv_ugc_title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/ugc_payment_subscription_title" android:maxLines="1" android:textAlignment="viewStart" android:layout_marginEnd="@dimen/_12sdp" app:layout_constraintEnd_toStartOf="@id/img_close" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <ImageView android:id="@id/img_close" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_close_payment_dialog" android:contentDescription="@string/mine_empty" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/theme_text2" android:id="@id/tv_ugc_subtitle" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_4sdp" android:text="@string/ugc_payment_subscription_subtitle" android:textAlignment="viewStart" android:layout_marginEnd="@dimen/_40sdp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_ugc_title" />
</androidx.constraintlayout.widget.ConstraintLayout>