<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/common_shape_conner_12_top_surface_3" android:layout_width="fill_parent" android:layout_height="fill_parent" android:backgroundTint="@color/theme_surface3"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="14.0sp" android:textColor="@color/theme_text1" android:gravity="center" android:id="@id/tv_message" android:paddingTop="20.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/delete_all_history_tips" android:paddingVertical="20.0dip" />
    <View android:id="@id/view1" android:background="@color/theme_line2" android:layout_width="fill_parent" android:layout_height="0.5dip" app:layout_constraintTop_toBottomOf="@id/tv_message" />
    <TextView android:textSize="16.0sp" android:textColor="@color/theme_brand6" android:gravity="center" android:id="@id/tv_confirm" android:paddingTop="16.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/confirm" android:paddingVertical="16.0dip" app:layout_constraintTop_toBottomOf="@id/view1" />
    <View android:id="@id/view2" android:background="@color/theme_surface2" android:layout_width="fill_parent" android:layout_height="8.0dip" app:layout_constraintTop_toBottomOf="@id/tv_confirm" />
    <TextView android:textSize="16.0sp" android:textColor="@color/theme_text1" android:gravity="center" android:id="@id/tv_cancel" android:paddingTop="16.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cancel_up" android:paddingVertical="16.0dip" app:layout_constraintTop_toBottomOf="@id/view2" />
</androidx.constraintlayout.widget.ConstraintLayout>